--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul id='card-list'></ul>
     </div>
 
-    <script src="staticStore.js"></script>
+    <script src="staticStore.js" type='module'></script>
 </body>
 
 </html>
