I got carried away and made lots of changes to lots of things

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./assets/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./css/main.css">
     <title>Pirate Emporium</title>
@@ -12,8 +14,14 @@
 <body>
     <div class="navbar">
         <nav>
-            <i class='material-icons'>login</i>
-            <i class='material-icons'>shopping_cart</i>
+            <div class="brand">
+                <img src='./assets/skullandcrossbones1.png' />
+                <a>Pirate Emporium</a>
+            </div>
+            <div class="nav-links">
+                <i class='material-icons'>login</i>
+                <i class='material-icons'>shopping_cart</i>
+            </div>
         </nav>
     </div>
 
