added button group

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <div class='title-text'>
             <h1>Pirate Emporium</h1>
             <h3>Exotic wares fit for the seas!</h3>
+            <div class='title-btn-group'>
+                <button>New Items</button>
+                <button>Search</button>
+                <button>Contact</button>
+            </div>
             <hr>
         </div>
     </div>
