added pagination controls

--- a/index.html
+++ b/index.html
@@ -55,10 +55,18 @@
     </div>
 
     <div class="pagination">
-        <i class="material-icons">skip_previous</i>
-        <i class="material-icons">arrow_back_ios</i>
-        <i class="material-icons">arrow_forward_ios</i>
-        <i class="material-icons">skip_next</i>
+        <div class="pag-prev">
+            <i class="material-icons pag-btn">skip_previous</i>
+            <i class="material-icons pag-btn">navigate_before</i>
+        </div>
+        <span class="pag-text">1</span>
+        <span class="pag-text">2</span>
+        <span class="pag-text">3</span>
+        <span class="pag-text">...</span>
+        <div class="pag-next">
+            <i class="material-icons pag-btn">navigate_next</i>
+            <i class="material-icons pag-btn">skip_next</i>
+        </div>
     </div>
 
     <script src="staticStore.js" type='module'></script>
