deleted old code and added comments

--- a/index.html
+++ b/index.html
@@ -39,19 +39,7 @@
     </div>
 
     <div class="card-container">
-        <ul id='card-list'>
-            <!-- <li class="card">
-                <div class="card-main">
-                    <img src="./assets/images/150px-Blue_Water_Parakeet_inv.png" alt="">
-                    <h3 class="card-title">test</h3>
-                    <p class="card-text">test</p>
-                    <p class="card-price">test</p>
-                    <div class="card-btn-container">
-                        <i class="material-icons">add_shopping_cart</i>
-                    </div>
-                </div>
-            </li> -->
-        </ul>
+        <ul id='card-list'></ul>
     </div>
 
     <div class="pagination">
